mdm_Location/MDM_Location/src/objects/MDM_Location__c.object
<CustomObject>
    <description>MDM_Location</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Address 1</description>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address line 1:</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Address 2</description>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address line 2:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <description>Address 3</description>
        <inlineHelpText>Address 3</inlineHelpText>
        <label>Address line 3:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Banner</description>
        <inlineHelpText>Banner</inlineHelpText>
        <label>Banner</label>
        <referenceTo>MDM_Banner__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CensusBlock__c</fullName>
        <label>Census Block</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Census_Tract__c</fullName>
        <description>Census Tract</description>
        <inlineHelpText>Census Tract</inlineHelpText>
        <label>Census Tract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationSourceSystem__c</fullName>
        <description>The source system, One last updated this record.</description>
        <label>ConfirmationSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <referenceTo>MDM_Country__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <inlineHelpText>County</inlineHelpText>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataOverrideFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag used to enable or disable the location data  enrichment (in BOOMI MDM) during the integration process.</description>
        <label>Data Override Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>Effective End Date</description>
        <inlineHelpText>Effective End Date</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>Effective Start Date</description>
        <inlineHelpText>Effective Start Date</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIP__c</fullName>
        <label>FIPs</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoLevel__c</fullName>
        <description>Lat/Long Accuracy</description>
        <inlineHelpText>Lat/Long Accuracy</inlineHelpText>
        <label>GeoLevel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoScore__c</fullName>
        <description>Lat/Lon Score</description>
        <inlineHelpText>Lat/Lon Score</inlineHelpText>
        <label>GeoScore</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoldenRecordID__c</fullName>
        <description>Golden Record ID</description>
        <inlineHelpText>Golden Record ID from BOOMI MDM</inlineHelpText>
        <label>Golden Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GooglePlaceID__c</fullName>
        <description>GooglePlaceID</description>
        <inlineHelpText>GooglePlaceID</inlineHelpText>
        <label>GooglePlaceID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBoomiMDMUpsert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag has no value as location attribute. It is used by internal triggers to override validate upsert value passed by user. if the upsert request by Boomi MDM this flag will be true, All other request it is false.   validate UPSERT override based on this value.</description>
        <label>IsBoomiMDMUpsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastFieldConfirmationDate__c</fullName>
        <label>Last Field Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Enrichment_Date__c</fullName>
        <description>Last Enrichment Date</description>
        <inlineHelpText>Last Enrichment Date</inlineHelpText>
        <label>Last Enrichment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude</description>
        <inlineHelpText>Latitude</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Location Status</description>
        <inlineHelpText>Location Status</inlineHelpText>
        <label>Location Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationStatus__c</fullName>
        <description>Store Outlet Status Indicator</description>
        <inlineHelpText>Store Outlet Status Indicator</inlineHelpText>
        <label>Location Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Number__c</fullName>
        <description>Location Number</description>
        <inlineHelpText>Location Number</inlineHelpText>
        <label>Store Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Location Type [Emploee / Store]</description>
        <inlineHelpText>Emploee / Store</inlineHelpText>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domicile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude</description>
        <inlineHelpText>Longitude</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <label>MSA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwningCompany__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>OwningCompany</description>
        <inlineHelpText>OwningCompany</inlineHelpText>
        <label>Owning Company</label>
        <referenceTo>MDM_OwningCompany__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations_OwningCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplacedByID__c</fullName>
        <label>Replaced By ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SourceSystem</description>
        <label>SourceSystem</label>
        <referenceTo>MDM_Source__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Province</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MDM_State__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MDM_State__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Phone_Number__c</fullName>
        <description>Store Phone Number</description>
        <inlineHelpText>Store Phone Number</inlineHelpText>
        <label>Store Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLinxNumber__c</fullName>
        <description>TDLinx #</description>
        <inlineHelpText>TDLinx #</inlineHelpText>
        <label>TDLinxNumber</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Time Zone</description>
        <inlineHelpText>Time Zone</inlineHelpText>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Trade Channel</description>
        <inlineHelpText>Trade Channel</inlineHelpText>
        <label>TradeChannel</label>
        <referenceTo>MDM_TradeChannel__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TradeSubChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TradeSubChannel</description>
        <inlineHelpText>TradeSubChannel</inlineHelpText>
        <label>TradeSubChannel</label>
        <referenceTo>MDM_TradeSubChannel__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UTCOffset__c</fullName>
        <label>UTC Time Zone Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValidateUpsert__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Submit for MDM validation. Based on this flag this new or updated record will be moved to stage for further validation.</description>
        <label>ValidateUpsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip4__c</fullName>
        <label>Zip4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ValidateUpsert__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>GooglePlaceID__c</columns>
        <columns>GoldenRecordID__c</columns>
        <columns>GeoLevel__c</columns>
        <columns>GeoScore__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>DataOverrideFlag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Time_Zone__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MDM_Location_Val_Country_StateCountry</fullName>
        <active>true</active>
        <description>MDM_Location_Match_Country_StateCountry
To validate the state and its country.</description>
        <errorConditionFormula>State__r.Country__c != Country__c</errorConditionFormula>
        <errorMessage>State doesn&apos;t belongs to selected country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDM_Location_Val_Status_Is_Required</fullName>
        <active>true</active>
        <description>MDM_Location
Store status is required</description>
        <errorConditionFormula>ISPICKVAL(LocationStatus__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>LocationStatus__c</errorDisplayField>
        <errorMessage>Store status is required.</errorMessage>
    </validationRules>
</CustomObject>